gtk3: Fix double border from search bars
Fix double border in windows with a hidden search bar below the
header, by styling the revealer content instead of the actual
searchbar widget.

Based on upstream commits:
https://gitlab.gnome.org/GNOME/gtk/commit/d465d790f0b425a391534df28548ff3fc3b9bb55
https://gitlab.gnome.org/GNOME/gtk/commit/4e2f59ad2308b3877e244809c8fb323092690a88

--- a/common/gtk-3.0/3.22/sass/_common.scss
+++ b/common/gtk-3.0/3.22/sass/_common.scss
@@ -982,12 +982,15 @@ toolbar {
   border-radius: 0  0 3px 3px;
 }
 
-searchbar {
+searchbar > revealer > box {
   background-color: $bg_color;
   border-style: solid;
   border-color: $borders_color;
   border-width: 0 0 1px;
-  padding: 3px;
+
+  // workaround: undo the GtkContainer:border-width and use CSS padding instead
+  margin: -6px;
+  padding: 6px;
 }
 
 actionbar {
